@@ -8,20 +8,20 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
-//configuration matchers
+
 //Cross Origin Resource Sharing(compartir recursos de origenes cruzados)
 //caracteristica de seguridad que permite a los navegadores restringir el acceso a los recursos de un servidor
 //permite a los servidores especificar no solo quien puede acceder a sus recursos, sino tambien como pueden ser accedidos
 
-@Configuration
+@Configuration //para que spring la tome como una clase de configuracion
 public class CorsConfig {
 
-  @Bean //para ponerla en contexto de la app y de las primeras que se ejecuten
+  @Bean //para ponerla en contexto de spring
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOrigins(Arrays.asList("http://localhost:8080","http://localhost:5173"));//permite a cualquier origen acceder a los recursos
-    configuration.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE"));//permite a cualquier metodo acceder a los recursos
-    configuration.setAllowedHeaders(List.of("*"));//permite a cualquier header acceder a los recursos
+    configuration.setAllowedOrigins(Arrays.asList("http://localhost:8080","http://localhost:5173"));//rutas que pueden acceder a los recursos
+    configuration.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE"));//metodos que pueden acceder a los recursos
+    configuration.setAllowedHeaders(List.of("*"));//lista de headers que se pueden usar en las peticiones
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", configuration);//registra la configuracion de cors para todas las rutas
     return source;
